# s4-plugins

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.md
.github/workflows/: build-debug-asi.yml
CampaignMarker/: CMakeLists.txt  README.md
CampaignMarker/cmake/: VerifyWin32.cmake
CampaignMarker/config/: CampaignCompletionDebug.ini
CampaignMarker/docs/research/: pdb-tooling-decision.md  phase-1-investigation-report.md  phase-2-1-diagnostic-hardening-report.md  phase-2-2-read-only-map-identity-report.md  phase-2-2-static-map-identity-evidence.md  phase-2-2-tab-calibration.md  phase-2-3-fixed-map-hook-evidence.md  phase-2-5-su-lua-map-identity-report.md  phase-2-diagnostic-bootstrap-report.md  phase-3b-native-victory-event-report.md  phase-5b-fixed-map-completion-marker-report.md  phase-5b-internal-menu-relative-marker-rendering-report.md  phase-5c-database-compatibility-recovery-report.md  phase-5c-database-read-only-forensics-report.md  phase-6a-dark-tribe-campaign-menu-forensics-report.md  phase-6a-dark-tribe-campaign-menu-static-evidence.md  (+10 more)
CampaignMarker/research/: README.md
CampaignMarker/src/: README.md  dllmain.cpp
CampaignMarker/tests/: BoundedMenuTextTests.cpp  CampaignCompletionMarkerIndexTests.cpp  CampaignDescriptorCatalogTests.cpp  CampaignLaunchAssociationTests.cpp  CampaignMarkerObserverTests.cpp  CampaignMenuCaptureTests.cpp  CampaignSessionAdmissionTests.cpp  CaptureTraceTests.cpp  CompletionDatabaseFixtures.h  CompletionJsonTests.cpp  CompletionManagerCatalogTests.cpp  CompletionManagerHotkeyTests.cpp  CompletionMarkerGeometryTests.cpp  CompletionMarkerRendererTests.cpp  CompletionRecordTests.cpp  CompletionStoreTests.cpp  CompletionWorkerTests.cpp  FixedMapCaptureStateTests.cpp  FixedMapDiscoveryTests.cpp  FixedMapIdentityProbeTests.cpp  FixedMapLoadHookTests.cpp  FixedMapRowCalibrationTests.cpp  FixedMapRowObserverTests.cpp  HookSiteLayoutTests.cpp  LaunchOriginTests.cpp  ListAttributionTests.cpp  LoggerTests.cpp  ManualCompletionTransactionTests.cpp  MapIdentityCoordinatorTests.cpp  MapPathValidatorTests.cpp  MarkerCalibrationTraceTests.cpp  ModuleInventoryTests.cpp  MsvcX86WideStringTests.cpp  NativeVictoryEventSubscriberTests.cpp  PageObservationTests.cpp  Phase3TraceTests.cpp  PluginPathsTests.cpp  ReadOnlyCompletionSourceTests.cpp  RuntimePolicyTests.cpp  SettlementUiProbeTests.cpp  (+7 more)
CampaignMarker/tools/: SettlersUnitedArtifact.psm1  test_settlers_united_artifact.ps1  verify_hook_adapter.ps1  verify_no_process_patch.ps1
config/: CampaignCompletion.ini.example  CampaignCompletionDebug.ini
docs/: architecture.md
docs/research/: phase-2-4-bounded-capture-trace-report.md  phase-3a-victory-ui-calibration-report.md  phase-3b-native-victory-event-report.md  phase-4-completion-persistence-build-report.md  phase-5a-fixed-map-row-calibration-report.md  phase-5b-fixed-map-completion-marker-report.md  phase-5b-read-only-fixed-map-menu-adapter-report.md  phase-5c-database-compatibility-recovery-report.md  phase-6a-1-public-sparse-campaign-association-build-report.md  phase-6a-2-dark-tribe-static-catalog-evidence.md  phase-6c-1-descriptor-family-session-gate-candidate-audit.md  phase-6c-immutable-campaign-descriptor-candidate-audit.md  phase-6c-immutable-campaign-descriptor-evidence.md  phase-6d-gap-only-all-campaign-geometry-report.md  phase-6d-gap-only-campaign-catalog-candidate-audit.md  phase-6e-campaign-session-persistence-candidate-audit.md  phase-7-classified-completion-manager-candidate-audit.md
research/evidence/: fixed-map-hook-site.txt  loader-state.txt  pdb-symbols.txt  pe-metadata.txt  phase-6d-all-campaign-descriptor-matrix.tsv
research/scripts/: collect_fixed_map_hook_evidence.sh  collect_loader_state.ps1  collect_s4modapi.sh  common.sh
src/: dllmain.cpp
src/campaign/: CampaignDescriptorCatalog.cpp  CampaignDescriptorCatalog.h  CampaignMenuCapture.h
src/completion/: CompletionCandidateCoordinator.cpp  CompletionCandidateCoordinator.h  CompletionJson.cpp  CompletionJson.h  CompletionRecord.cpp  CompletionRecord.h  CompletionStore.cpp  CompletionStore.h  CompletionWorker.cpp  CompletionWorker.h
src/diagnostics/: Logger.h  Phase3Trace.cpp
src/hook/: FixedMapLoadHook.cpp  FixedMapLoadHook.h  HlibCallPatchBackend.cpp  MsvcX86WideString.cpp
src/identity/: FixedMapIdentityProbe.cpp  FixedMapIdentityProbe.h  ListAttribution.cpp  ListAttribution.h  LuaMapSession.cpp  MapIdentityCoordinator.cpp  MapIdentityCoordinator.h  MapPathValidator.h  SuMapValue.h
src/marker/: CompletionMarkerGeometry.cpp  CompletionMarkerGeometry.h  CompletionMarkerIndex.cpp  CompletionMarkerIndex.h  CompletionMarkerRenderer.cpp  CompletionMarkerRenderer.h  FixedMapMenuReader.cpp  FixedMapRowCalibration.h  FixedMapRowObserver.cpp  FixedMapRowObserver.h
src/native/: NativeEventRegistration.cpp  NativeVictoryEventSubscriber.cpp  NativeVictoryEventSubscriber.h
src/runtime/: DiagnosticRuntime.cpp  DiagnosticRuntime.h  ListenerRemoval.cpp  PageObservation.cpp  PageObservation.h  PluginPaths.h  S4Listeners.cpp  S4Listeners.h  StopRequest.cpp  StopRequest.h
src/victory/: LaunchOrigin.cpp  LaunchOrigin.h  MapSessionPolicy.cpp  MapSessionPolicy.h  SettlementUiProbe.cpp  SettlementUiProbe.h
tests/: CampaignDescriptorCatalogTests.cpp  CampaignMenuCaptureTests.cpp  CaptureTraceTests.cpp  CompletionCandidateCoordinatorTests.cpp  CompletionJsonTests.cpp  CompletionMarkerGeometryTests.cpp  CompletionMarkerIndexTests.cpp  CompletionMarkerRendererTests.cpp  CompletionRecordTests.cpp  CompletionRuntimeFlowTests.cpp  FixedMapIdentityProbeTests.cpp  FixedMapLoadHookTests.cpp  FixedMapMenuReaderTests.cpp  FixedMapRowObserverTests.cpp  LaunchOriginTests.cpp  ListAttributionTests.cpp  ListenerRemovalTests.cpp  LoggerTests.cpp  LuaMapSessionTests.cpp  MapIdentityCoordinatorTests.cpp  MapSessionPolicyTests.cpp  NativeEventAdmissionTests.cpp  RuntimePolicyTests.cpp  SuLuaMapBridgeTests.cpp  TestMain.cpp
tools/: install_settlers_united_artifact.ps1  package_debug.ps1  restore_settlers_united_artifact.ps1  verify_hook_adapter.ps1  verify_no_process_patch.ps1
(+150 files in other folders)
